src/objects/Project__c.object
<CustomObject>
    <description>Projects are a core object in this application.  Projects can be related work requests that describe the initial project approval.  Additional work requests can be used for change management.  Projects include team members, benefit definition, budget and cost line items, risks, status reports, and time.  Often, organizations will use activities or create a child object to track milestones/gates.</description>
    <fields>
        <fullName>ActivatedRecently__c</fullName>
        <description>Whether or not the project was activated since our last meeting</description>
        <formula>if ( DateActivated__c &gt; today() -45, &apos;Y&apos;,&apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Whether or not the project was activated since our last meeting</inlineHelpText>
        <label>Activated Recently</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualCosts__c</fullName>
        <inlineHelpText>Actual costs is a roll up summary of the cost items actual amount field that meet the following cost item status - Posted, Paid, On Hold, Received, Planned.</inlineHelpText>
        <label>Actual Costs</label>
        <summarizedField>CostItem__c.ActualCosts__c</summarizedField>
        <summaryFilterItems>
            <field>CostItem__c.Status__c</field>
            <operation>equals</operation>
            <value>Posted, Paid, On Hold, Received, Planned</value>
        </summaryFilterItems>
        <summaryForeignKey>CostItem__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BudgetedCosts__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total budget for the project.</inlineHelpText>
        <label>Budgeted Costs</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetedHours__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Estimated hours for duration of the project.</inlineHelpText>
        <label>Budgeted Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessNeed__c</fullName>
        <inlineHelpText>Please describe project in terms of the business unit requesting work.</inlineHelpText>
        <label>Business Need</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BusinessUnitRank__c</fullName>
        <description>The Rank of the current project according for the submitting business.</description>
        <inlineHelpText>Rank (between 1 - 999,999) of project for business.</inlineHelpText>
        <label>Business Unit Rank</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessUnitSponsor__c</fullName>
        <label>Business Unit Sponsor</label>
        <picklist>
            <picklistValues>
                <fullName>Academic Areas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT - Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessUnitTier__c</fullName>
        <description>The tier of the Project A, B, or C</description>
        <inlineHelpText>The tier of the Project A, B, or C</inlineHelpText>
        <label>Business Unit Tier</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CommunicationPlan__c</fullName>
        <description>Please Describe the Communication Plan to let all interested people know about the project.</description>
        <inlineHelpText>Please Describe the Communication Plan to let all interested people know about the project.</inlineHelpText>
        <label>Communication Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompletedRecently__c</fullName>
        <description>Whether or not the project was ended since our last priority meeting to allow highlighting and keeping on the list</description>
        <formula>ProjectEndDate__c  &gt; today() -45</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Whether or not the project was ended since our last priority meeting</inlineHelpText>
        <label>Completed Recently</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CostCenter__c</fullName>
        <label>Cost Center</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CostMeterPercentComplete__c</fullName>
        <formula>(ActualCosts__c / BudgetedCosts__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Meter Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CostMeter__c</fullName>
        <description>This is based off of a custom formula field not on the page layout.</description>
        <formula>IMAGE( 
&quot;http://chart.apis.google.com/chart&quot; &amp; 
&quot;?chs=180x80&quot; &amp; 
&quot;&amp;cht=gom&quot; &amp; 
&quot;&amp;chd=t:&quot; &amp; TEXT(  CostMeterPercentComplete__c   ) &amp; 
&quot;&amp;chf=bg,s,0000FF00&quot; &amp; 
&quot;&amp;chl=&quot; &amp; TEXT(CostMeterPercentComplete__c) &amp; &quot;%&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost meter is defined as Actual Costs / Budgeted Costs.  This cost meter is an example of google charts integrated to Salesforce.com via a custom formula field.</inlineHelpText>
        <label>Cost Meter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateActivated__c</fullName>
        <description>Date the project was set to active.</description>
        <label>Date Activated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliveredBusinessAsset__c</fullName>
        <label>Delivered Business Asset</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations/Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Capital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExpectedDeliverables__c</fullName>
        <inlineHelpText>What all would be delivered as part of this project</inlineHelpText>
        <label>Expected Deliverables (Epics)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ITProjectManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of assigned IT Project Manager for current project.</description>
        <inlineHelpText>Name of assigned IT Project Manager for current project.</inlineHelpText>
        <label>IT Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <description>How many students/staff members will this effect?</description>
        <inlineHelpText>How many students/staff members will this effect?</inlineHelpText>
        <label>Impact</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InfrastructureRequirements__c</fullName>
        <inlineHelpText>What are the high level infrastructure requirements involved?</inlineHelpText>
        <label>Infrastructure Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InvestmentNature__c</fullName>
        <label>Investment Nature</label>
        <picklist>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Discretionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discretionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JiraProject__c</fullName>
        <description>The link to the Jira Project</description>
        <inlineHelpText>The link to the Jira Project</inlineHelpText>
        <label>Jira Project</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KeyConstraintsAssumptions__c</fullName>
        <inlineHelpText>What are the assumptions in terms of budget, process and people?</inlineHelpText>
        <label>Key Constraints / Assumptions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OutsourcingCandidate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not this a candidate for outsourcing</description>
        <inlineHelpText>Whether or not this a candidate for outsourcing</inlineHelpText>
        <label>Outsourcing Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PercentCompleteCosts__c</fullName>
        <formula>BudgetedCosts__c  /  ActualCosts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete (Costs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PlannedBenefits__c</fullName>
        <label>Planned Benefits</label>
        <summarizedField>Benefit__c.Planned_Benefit_Amount__c</summarizedField>
        <summaryForeignKey>Benefit__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PlannedCosts__c</fullName>
        <inlineHelpText>Planned costs is a roll up summary of the cost items planned amount field that meet the following cost item status - Posted, Paid, On Hold, Received, Planned.</inlineHelpText>
        <label>Planned Cost</label>
        <summarizedField>CostItem__c.EstimatedCosts__c</summarizedField>
        <summaryFilterItems>
            <field>CostItem__c.Status__c</field>
            <operation>equals</operation>
            <value>Planned, Received, On Hold, Paid, Posted</value>
        </summaryFilterItems>
        <summaryForeignKey>CostItem__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PlannedDuration__c</fullName>
        <formula>(PlannedEndDate__c -  PlannedStartDate__c)/7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration in weeks = (Planned End Date - Planned Start Date) / 7</inlineHelpText>
        <label>Planned Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlannedEndDate__c</fullName>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlannedStartDate__c</fullName>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>Portfolio__c</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PriorityTierCalc__c</fullName>
        <formula>case(Impact__c,
      &quot;High&quot; , case(Urgency__c,&quot;High&quot;,1,&quot;Medium&quot;, 2, &quot;Low&quot;, 3,null),
      &quot;Medium&quot; ,case(Urgency__c,&quot;High&quot;,2,&quot;Medium&quot;, 3, &quot;Low&quot;, 4,null),
      &quot;Low&quot; , case(Urgency__c,&quot;High&quot;,3,&quot;Medium&quot;, 4, &quot;Low&quot;, 5, null),
      null
 )</formula>
        <label>Priority Tier Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorityTier__c</fullName>
        <description>The tier of the Project A, B, or C</description>
        <inlineHelpText>The tier of the Project A, B, or C</inlineHelpText>
        <label>Priority Tier</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectAcceptanceCriteria__c</fullName>
        <inlineHelpText>Please define Project Success Criteria.  What has to be true to say that this project is complete.</inlineHelpText>
        <label>Project Acceptance Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProjectDuration__c</fullName>
        <formula>(ProjectEndDate__c - ProjectStartDate__c) / 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration in weeks = (Project End Date - Project Start Date) / 7</inlineHelpText>
        <label>Actual Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectEndDate__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectGoal__c</fullName>
        <label>Project Goal</label>
        <picklist>
            <picklistValues>
                <fullName>Graduate Students</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Excellence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer of Choice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectID__c</fullName>
        <description>Unique identifier for projects</description>
        <displayFormat>PROJ-{00000}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProjectITSize__c</fullName>
        <description>The size it is in relation to IT resources</description>
        <inlineHelpText>The size it is in relation to IT resources</inlineHelpText>
        <label>Project IT Size</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectPhase__c</fullName>
        <inlineHelpText>Note: Implementation Phase Includes user acceptance, training, and post production support.</inlineHelpText>
        <label>Project Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Initiation</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Business Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iteration 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectRank__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>The Rank of the current project overall</description>
        <inlineHelpText>The Rank of the current project overall</inlineHelpText>
        <label>Project Rank</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectScope__c</fullName>
        <inlineHelpText>Please describe the scope of the project.</inlineHelpText>
        <label>Project Scope</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProjectSize__c</fullName>
        <description>The size the project is overall</description>
        <label>Project Size</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectSponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectStartDate__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectStatus__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Initiating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prioritized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Please select the region(s) that this project supports.</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LACA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RemaingCosts__c</fullName>
        <formula>BudgetedCosts__c - ActualCosts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Budget - Actual Costs</inlineHelpText>
        <label>Remaining (Costs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RemainingBudget__c</fullName>
        <formula>BudgetedCosts__c  - ActualCosts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Overall Budget  - budget line item actual cost items.</inlineHelpText>
        <label>Remaining Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SFAdminsOnProject__c</fullName>
        <description>A roll up summary with a count of Team Members where Role = Salesforce Administrator</description>
        <label>SF Admins On Project</label>
        <summaryFilterItems>
            <field>TeamMember__c.Role__c</field>
            <operation>equals</operation>
            <value>Salesforce Administrator</value>
        </summaryFilterItems>
        <summaryForeignKey>TeamMember__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>StrategicReport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not it should show in the strategic summary</description>
        <inlineHelpText>Whether or not it should show in the strategic summary</inlineHelpText>
        <label>Strategic Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SupportPlan__c</fullName>
        <inlineHelpText>Please define the Change Management Process.</inlineHelpText>
        <label>Support Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TierRank__c</fullName>
        <description>Formula field that combines the Priority Tier with the Project Rank.</description>
        <formula>TEXT(PriorityTier__c)+ LPAD (TEXT(ProjectRank__c),4,&quot;0&quot;)</formula>
        <label>Tier &amp; Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrainingPlan__c</fullName>
        <inlineHelpText>Who is going to provide training.  What will make it work.</inlineHelpText>
        <label>Training Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <description>What is the urgency of this project.  What is the worst thing that will happen if this project is not complete.</description>
        <inlineHelpText>What is the urgency of this project.  What is the worst thing that will happen if this project is not complete.</inlineHelpText>
        <label>Urgency</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VarianceDuration__c</fullName>
        <formula>PlannedDuration__c - ProjectDuration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned - Actual (Duration)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WGUGoalAlignment__c</fullName>
        <inlineHelpText>How does this align with WGU&apos;s three goals and 6 Pillars?   Use Benefits to Quantify in detail.</inlineHelpText>
        <label>WGU Goal Alignment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>AcadServices</fullName>
        <columns>NAME</columns>
        <columns>ProjectRank__c</columns>
        <columns>PriorityTier__c</columns>
        <columns>ProjectStatus__c</columns>
        <columns>WGUGoalAlignment__c</columns>
        <columns>BusinessUnitSponsor__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ProjectPhase__c</columns>
        <columns>ProjectITSize__c</columns>
        <columns>ProjectSize__c</columns>
        <columns>Portfolio__c</columns>
        <columns>ProductManager__c</columns>
        <columns>DateActivated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProjectStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete,Cancelled</value>
        </filters>
        <filters>
            <field>BusinessUnitSponsor__c</field>
            <operation>equals</operation>
            <value>Academic Services</value>
        </filters>
        <label>Academic Services</label>
    </listViews>
    <listViews>
        <fullName>Active</fullName>
        <columns>ProjectID__c</columns>
        <columns>TierRank__c</columns>
        <columns>NAME</columns>
        <columns>Portfolio__c</columns>
        <columns>ProjectManager__c</columns>
        <columns>ProjectStatus__c</columns>
        <columns>ProjectPhase__c</columns>
        <columns>ProjectGoal__c</columns>
        <columns>ProjectITSize__c</columns>
        <columns>ProjectSize__c</columns>
        <columns>DateActivated__c</columns>
        <columns>CommunicationPlan__c</columns>
        <columns>ProjectAcceptanceCriteria__c</columns>
        <columns>SupportPlan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProjectStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>ProjectID__c</columns>
        <columns>NAME</columns>
        <columns>WGUGoalAlignment__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>TierRank__c</columns>
        <columns>PriorityTier__c</columns>
        <columns>ProjectRank__c</columns>
        <columns>ProjectStatus__c</columns>
        <columns>ProjectPhase__c</columns>
        <columns>ProjectSize__c</columns>
        <columns>Portfolio__c</columns>
        <columns>ProductManager__c</columns>
        <columns>DateActivated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProjectStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MyProjects</fullName>
        <columns>NAME</columns>
        <columns>Portfolio__c</columns>
        <columns>BusinessUnitSponsor__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ProjectRank__c</columns>
        <columns>ProjectStatus__c</columns>
        <columns>ProjectPhase__c</columns>
        <columns>ProjectGoal__c</columns>
        <columns>ProjectITSize__c</columns>
        <columns>ProjectSize__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ProjectStatus__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Complete</value>
        </filters>
        <label>My Projects</label>
    </listViews>
    <listViews>
        <fullName>NewtoPrioritize</fullName>
        <columns>NAME</columns>
        <columns>Portfolio__c</columns>
        <columns>PriorityTier__c</columns>
        <columns>ProjectRank__c</columns>
        <columns>ProductManager__c</columns>
        <columns>ProjectStatus__c</columns>
        <columns>ProjectPhase__c</columns>
        <columns>ProjectGoal__c</columns>
        <columns>ProjectITSize__c</columns>
        <columns>ProjectSize__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProjectStatus__c</field>
            <operation>equals</operation>
            <value>Initiated,Approved</value>
        </filters>
        <label>New - To Prioritize</label>
    </listViews>
    <listViews>
        <fullName>NonComplete</fullName>
        <columns>NAME</columns>
        <columns>ProjectRank__c</columns>
        <columns>PriorityTier__c</columns>
        <columns>WGUGoalAlignment__c</columns>
        <columns>BusinessUnitSponsor__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ProjectStatus__c</columns>
        <columns>ProjectPhase__c</columns>
        <columns>ProjectITSize__c</columns>
        <columns>ProjectSize__c</columns>
        <columns>Portfolio__c</columns>
        <columns>ProductManager__c</columns>
        <columns>DateActivated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProjectStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete,Cancelled</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>SRM Enhancements</value>
        </filters>
        <label>Non-Complete</label>
    </listViews>
    <listViews>
        <fullName>NonCompleteSFAdministrationProjects</fullName>
        <columns>NAME</columns>
        <columns>ProjectRank__c</columns>
        <columns>PriorityTier__c</columns>
        <columns>WGUGoalAlignment__c</columns>
        <columns>BusinessUnitSponsor__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ProjectStatus__c</columns>
        <columns>ProjectPhase__c</columns>
        <columns>ProjectITSize__c</columns>
        <columns>ProjectSize__c</columns>
        <columns>Portfolio__c</columns>
        <columns>ProductManager__c</columns>
        <columns>DateActivated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProjectStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete,Cancelled</value>
        </filters>
        <filters>
            <field>SFAdminsOnProject__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Non-Complete SF Administration Projects</label>
        <sharedTo>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ODM_Document_Transfer</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>ODM Document Transfer</label>
    </listViews>
</CustomObject>